--- a/releases.json
+++ b/releases.json
@@ -1,4 +1,12 @@
 [
+    {
+        "version": "1.3.1",
+        "downloadUrl": "https://github.com/kriden/progressive/archive/master.zip",
+        "date": "2017-05-22T21:00:00-11:00",
+        "notes": [
+            "[FIX] Replaced split() function with explode(), to allow full support on PHP7"
+        ]
+    },
 	{
         "version": "1.3.0",
         "downloadUrl": "https://github.com/kriden/progressive/archive/master.zip",
